src/snapshots/ghqctoolkit__new_round__tests__qc_new_round_body_with_note.snap
---
source: src/new_round.rs
expression: body
---
# QC New Round

## Metadata
* round: 2
* round commit: ccccccc000000000000000000000000000000003
* previous approved commit: bbbbbbb000000000000000000000000000000002
* checklist: Code Review Checklist
* note: Second pass after the refactor.

## Checklist
- [ ] item one
- [ ] item two
