src/snapshots/ghqctoolkit__new_round__tests__qc_new_round_body_without_note.snap
---
source: src/new_round.rs
expression: body
---
# QC Round 2

## Metadata
* round: 2
* initial qc round commit: ccccccc000000000000000000000000000000003
* previous approved commit: bbbbbbb000000000000000000000000000000002

# Code Review Checklist
- [ ] item one
- [ ] item two
